--- a/smarthttp/build.gradle
+++ b/smarthttp/build.gradle
@@ -29,19 +29,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //    IO操作 Okio
-    compile "com.squareup.okio:okio:1.13.0"
+    api "com.squareup.okio:okio:1.13.0"
 //    网络操作 okHttp
-    compile "com.squareup.okhttp3:okhttp:3.9.1"
+    api "com.squareup.okhttp3:okhttp:3.9.1"
 //    图片加载 Glide
-    compile "com.github.bumptech.glide:glide:4.3.1"
+    api "com.github.bumptech.glide:glide:4.3.1"
     annotationProcessor "com.github.bumptech.glide:compiler:4.3.1"
 //    网络请求使用OkHttp
-    compile 'com.github.bumptech.glide:okhttp-integration:1.5.0@aar'
+    api 'com.github.bumptech.glide:okhttp-integration:1.5.0@aar'
 //    json解析 gson
-    compile 'com.google.code.gson:gson:2.8.4'
+    api 'com.google.code.gson:gson:2.8.4'
 }
